--- a/about-me/index.html
+++ b/about-me/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Make me into a grid!</title>
+        <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,23 +13,18 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <link href='http://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+        <link href="https://fonts.googleapis.com/css?family=Lora|Source+Sans+Pro:400,700" rel="stylesheet">
     </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-       
+
+        <!-- Add your site or application content here -->
+        
         <section class="wrapper">
-            <div class="div-1">
-                Meow
-            </div>
-            <div class="div-2">
-                Meow
-            </div>
-            <div class="div-3">
-                Meow
+            <div id="content">
+                <p>I am an Archivist and digital collections nerd who loves plant babies and Power Rangers. I have a peach-colored puff of a cat who considers himself very neglected. My seasonal Twitter names are better than yours.</p>
             </div>
         </section>    
 
